--- a/Logistics/manage/cencel_staff_warrant.html
+++ b/Logistics/manage/cencel_staff_warrant.html
@@ -1,9 +1,4 @@
-﻿<%@ Page Language="C#" AutoEventWireup="true" CodeBehind="LC_Success.aspx.cs" Inherits="Logistics.LC.Business.PretendCar.LC_Success" %>
-<%@ Import Namespace="CustomExtensions" %>
-<%@ import Namespace="GlobalBLL" %>
-<%@ Import Namespace="System.Linq" %>
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -11,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>物流管理系统</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-     <link rel="stylesheet" href="/Style/css/sui/sm.min.css">
-    <link rel="stylesheet" href="/Style/css/sui/sm-extend.min.css">
-    <link href="/Style/css/iconlink.css" rel="stylesheet">
-    <link rel="stylesheet" href="/Style/css/style.css">
+    <link rel="stylesheet" href="../css/sui/sm.min.css">
+    <link rel="stylesheet" href="../css/sui/sm-extend.min.css">
+    <link href="../css/iconlink.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         input[type=checkbox]{
             -webkit-appearance:checkbox;
@@ -35,7 +30,7 @@
         <div class="page page-current">
             <!-- 你的html代码 -->
             <header class="bar bar-nav">
-                <a href="/LC/Business/PretendCar/LC_Vehicle.aspx" class="icon iconfont icon-zuo pull-left"></a>
+                <a href="index.html" class="icon iconfont icon-zuo pull-left"></a>
                 <!-- <p class="add_wuliu">
                     <a class="add_icon icon iconfont icon-eventnote pull-right" href="history_log.html"></a>
                     <i class="add_txt">历史记录</i>
@@ -44,34 +39,32 @@
                 <h1 class="title">成功</h1>
             </header>
 
-            <%foreach (var v in list){ %>
+
             <div class="content" style="background:#f2f2f2;">
                 <div class="page-index">
                     <div class="txt_center white" style="padding:1rem;margin-top:1rem;">
-                        <p> <i class="iconfont fc_green" style="font-size:55px;">&#xe67b;</i></p>
-                        <p>装车成功</p>
-                        <p>运费： <span>￥<%=v.Freight %></span></p>
-                        <strong  style="font-size:25px; font-weight:400;"><%=DAL.DAL.DALBase.GetCarFromID(v.VehicleID.Value)?.Item2?.VehicleNo%>(<%=v.VehicleID %>M)</strong>
-                        <p class="fz_12 txt_right mart_20">添加日期： <span><%=v.TruckTime %></span></p>
+                        <p> <i class="iconfont fc_red" style="font-size:55px;">&#xe63d;</i></p>
+                        <strong class=" mart_10" style="font-size:25px; font-weight:400;">王大龙</strong>
+                        <p class="mart_10">管理员</p>
+                        <p class="fz_12 txt_center marb_20 mart_10 fc_ash">添加日期： <span>2017-07-20 00：57</span></p>
+                        
+                        <p class="dis_flex" style="justify-content:center;"><a class="green fc_white fz_14" href="manage_warrant.html"style="width:94px;height:30px; line-height:30px; margin-right:.5rem;">返回</a><a class="red fc_white fz_14" href="manage_warrant.html" style="width:94px;height:30px; line-height:30px;">确认取消</a></p>
                     </div>
                 </div>
 
 
             </div>
-            <%} %>
         </div>
     </div>
 
-    <script type="text/javascript" src="http://wl.mikiboss.com/Style/scripts/all.js" charset='utf-8'></script>
-    <%--<script type="text/javascript" src="js/main.js" charset='utf-8'></script>--%>
+    <script type='text/javascript' src='../all.js' charset='utf-8'></script>
+    <script type="text/javascript" src="js/main.js" charset='utf-8'></script>
     <script>
         $(function () {
             $.init();
             $.config = { router: false }
         });
-        setInterval(function(){
-            window.location.href ="/LC/Business/PretendCar/LC_IndexPC.aspx"
-        },2000)
+        
     </script>
 
 </body>
