新的静态页

--- a/Logistics/manage/add_line.html
+++ b/Logistics/manage/add_line.html
@@ -10,10 +10,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link rel="stylesheet" href="../css/sui/sm.min.css">
-    <link rel="stylesheet" href="../css/sui/sm-extend.min.css">
-    <link href="../css/iconlink.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/Style/css/sui/sm.min.css">
+    <link rel="stylesheet" href="/Style/css/sui/sm-extend.min.css">
+    <link href="/Style/css/iconlink.css" rel="stylesheet">
+    <link rel="stylesheet" href="/Style/css/style.css">
     <style>
         .zbsh-zffs .huo_name {
             position: relative;
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <script type='text/javascript' src='../all.js' charset='utf-8'></script>
+    <script type='text/javascript' src='/Style/scripts/all.js' charset='utf-8'></script>
 
     <script>
         $(function () {
